[FIX] sap.f.Avatar/sap.m.Image: Focus aligned with specification
Problem:
Focus of sap.m.Image and sap.f.Avatar doesn't match
visual design specification.

BCP: 1980194630

--- a/src/sap.m/src/sap/m/themes/base/Image.less
+++ b/src/sap.m/src/sap/m/themes/base/Image.less
@@ -26,6 +26,19 @@ span.sapMImg {
 	outline: none;
 }
 
+.sapMImgFocusable:focus {
+	outline: 0.0625rem dotted @sapUiContentFocusColor;
+}
+
+html[data-sap-ui-browser^="ie"] .sapMImgFocusable:focus,
+html[data-sap-ui-browser^="ed"] .sapMImgFocusable:focus {
+	outline-style: dashed;
+}
+
+html:not(.sap-desktop) .sapMImgFocusable:focus {
+	outline: none;
+}
+
 
 /* ==========================================================================
    Image opening a LightBox
